cluster/apps/arr-stack/old/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.5
          ports:
            - containerPort: 8096
              protocol: TCP
            - containerPort: 7359
              protocol: UDP
          # env:
          #   - name: PUID     # équivalent --user uid:gid
          #     value: "<uid>"
          #   - name: PGID
          #     value: "<gid>"
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            # - name: jellyfin-cache
            #   mountPath: /cache
            - name: jellyfin-media
              mountPath: /media
              readOnly: true  # 🔹 en lecture seule pour la bibliothèque
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
        # - name: jellyfin-cache
        #   hostPath:
        #     path: "/path/to/cache"
        #     type: DirectoryOrCreate
        - name: jellyfin-media
          hostPath:
            path: "/mnt/shared_data/movies"
            type: Directory
